name:                acme-client
version:             0.0.0
synopsis:            Client for ACME protocol
description:         Client for ACME protocol
license:             BSD3
license-file:        LICENSE
author:              Philipp Balzarek
maintainer:          p.balzarek@googlemail.com
copyright:           2015 Philipp Balzarek
category:            Network
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:    src/
  ghc-options:       -Wall -O2
  exposed-modules:   Network.Acme.Types
  build-depends:     aeson
                   , base >= 4 && <5
                   , bytestring >= 0.10
                   , containers >= 0.5.6.2
                   , cryptonite >= 0.8
                   , data-default
                   , exceptions >= 0.8
                   , jose >= 0.3
                   , lens
                   , lens-aeson
                   , mtl >= 2.2.1
                   , template-haskell >= 2.10.0.0
                   , text
                   , unordered-containers >= 0.2
                   , wreq